--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A template for creating IIIF manifests/collections with biiif",
   "main": "index.js",
   "scripts": {
-    "build": "npx biiif collection -u https://sitename.platform.app"
+    "build": "npx biiif collection -u https://my-cool-iiif-six.vercel.app"
   },
   "repository": {
     "type": "git",
